syntax = "proto3";
package Proto;
option go_package = "/Proto";


service Mercenary {
    rpc StartFloor(FloorInfo) returns (Empty);
    rpc ReportMove(Move) returns (Empty);
}

service Director {
    rpc AddMercenary(MercenaryInfo) returns (Empty);
    rpc ReportDeath(DeathInfo) returns (Empty);
    rpc ReportMove(MoveInfo) returns (Empty);
    rpc CheckStatus(Empty) returns (StatusResponse);
    rpc RequestAccumulatedAmount(Empty) returns (AccumulatedAmountResponse); // Added for DoshBank
}

service DoshBank {
    rpc GetAccumulatedAmount(Empty) returns (AccumulatedAmountResponse);
}

message FloorInfo {
    int32 floor = 1;
}

message Move {
    string action = 1;
    bool leads_to_death = 2;
}

message MercenaryInfo {
    string name = 1;
    string address = 2;
}

message DeathInfo {
    string name = 1;
}

message MoveInfo {
    string name = 1;
    Move move = 2;
}

message StatusResponse {
    repeated MercenaryStatus mercenaries = 1;
}

message MercenaryStatus {
    string name = 1;
    bool alive = 2;
    bool ready = 3;
    string address = 4;
}

message AccumulatedAmountResponse { // Added for DoshBank
    int32 amount = 1;
}

message Empty {}

